<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.gitee.visual0zz</groupId>
    <artifactId>flora-project</artifactId>
    <version>0.1</version>
    <packaging>pom</packaging>

    <modules>
        <module>flora-ramet</module>
        <module>plugins/maven-plugins/flora-ramet-plugin</module>
        <module>flora-osmetes</module>
        <module>flora-root</module>
        <module>flora-garden</module>
        <module>flora</module>
        <module>flora-benchmark</module>
        <module>flora-tangle</module>
        <module>flora-tangle/testbed</module>
        <module>cultivating/flora-sanctum</module>
    </modules>

    <properties>
        <revision>0.1</revision>
        <jmh.version>1.37</jmh.version>
        <surefire.version>3.5.2</surefire.version>
        <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
        <maven.compiler.source>26</maven.compiler.source>
        <maven.compiler.target>26</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- JUnit 5 单元测试：所有子模块统一继承 -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.11.4</version>
                <scope>test</scope>
            </dependency>
            <!-- JUnit Platform Launcher：IDEA 运行测试所需 -->
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-launcher</artifactId>
                <version>1.11.4</version>
                <scope>test</scope>
            </dependency>
            <!-- plexus-utils: 修复 CVE-2025-67030（目录遍历，CVSS 8.8）
                 maven-plugin-api:3.9.11 传递依赖 3.6.0，需覆盖为 3.6.1 -->
            <dependency>
                <groupId>org.codehaus.plexus</groupId>
                <artifactId>plexus-utils</artifactId>
                <version>3.6.1</version>
            </dependency>
            <!-- 编译期 Nullability 注解 -->
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>26.0.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- JUnit 5 单元测试：所有子模块统一继承 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- JUnit Platform Launcher：IDEA 运行测试所需 -->
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Nullability 注解：适用于所有 Java 源码 -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- 单元测试运行器：必须显式指定支持 JUnit5 / Java 26 的版本，
                 否则默认 surefire 不识别 jupiter 用例（测试结果恒为 0）。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
            </plugin>
            <!-- 编译器：3.1 太旧，无法把模块化依赖（如 com.flora.root）放到模块路径，
                 会导致 requires 的模块找不到；3.14.0 支持 JPMS 模块路径并兼容 Java 26。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.15</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>osmetes-plugin</id>
            <activation>
                <file>
                    <exists>${user.home}/.m2/repository/io/gitee/visual0zz/flora-osmetes/0.1/flora-osmetes-0.1.jar</exists>
                </file>
            </activation>
            <modules>
                <module>plugins/maven-plugins/flora-osmetes-plugin</module>
            </modules>
        </profile>
    </profiles>
</project>
